welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:17: error: expected class or object definition
def faireBarre(c:Color){
^PatternPicture:33: error: expected class or object definition
def faireBarre1(c:Color){
^PatternPicture:50: error: expected class or object definition
def faireMotif(){
^PatternPicture:70: error: Unmatched closing brace '}' ignored here
    recule()}
            ^